# qsv_enc_lab

./: .gitignore  CMakeLists.txt  README.md  encode.cpp  source.yuv
